2011-03-31 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix for addition with literal when right operand is partially in hl.

2011-03-29 Borut Razem <borut.razem AT gmail.com>

	* Partially merge from trunk

2011-03-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/z80.h,
	  src/z80/gen.c,
          src/z80/ralloc2.cc,
	  src/z80/peeph-z80.def:
	  Handle IY in the new allocator.

2011-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/z80.h:
	  Preparations for handling IY in the new allocator.

2011-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/ralloc.c,
	  Fixes for the exact cost function.

2011-03-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklex.c,
	* src/SDCCast.c: small fixes

2011-03-28 Borut Razem <borut.razem AT gmail.com>

	* src/z80/gen.c: fixed bug, introduced during code cleaning

2011-0-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  src/SDCCval.h,
	  src/SDCC.y,
	  src/SDCCglue.c,
	  src/pic14/glue.c,
	  src/pic16/glue.c,
	  src/SDCCast.c:
	  Support for designated initializers, thanks C. Scott and R. Quattlebaum.

2011-03-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08mch.c,  sdas/as6808/m08pst.c,
	* sdas/as8051/i51mch.c,  sdas/as8051/i51pst.c,
	* sdas/asgb/gbmch.c,     sdas/asgb/gbpst.c,
	* sdas/asz80/z80mch.c,   sdas/asz80/z80pst.c,
	* sdas/asxxsrc/asdata.c, sdas/asxxsrc/asexpr.c,
	* sdas/asxxsrc/aslist.c, sdas/asxxsrc/asmain.c,
	* sdas/asxxsrc/asout.c,  sdas/asxxsrc/asxxxx.h,
	* sdas/linksrc/aslink.h, sdas/linksrc/lkaomf51.c,
	* sdas/linksrc/lkar.c,   sdas/linksrc/lkarea.c,
	* sdas/linksrc/lkdata.c, sdas/linksrc/lkelf.c,
	* sdas/linksrc/lkeval.c, sdas/linksrc/lkhead.c,
	* sdas/linksrc/lkihx.c,  sdas/linksrc/lklex.c,
	* sdas/linksrc/lklib.c,  sdas/linksrc/lklibr.c,