@@ -1,6 +1,11 @@
 2011-03-31 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
+	  Fix for genPointerGet when result is lh.
+
+2011-03-31 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
 	  Fix for addition with literal when right operand is partially in hl.
 
 2011-03-29 Borut Razem <borut.razem AT gmail.com>
